unpackaged/main/default/objects/FSL__UserSetting__c/FSL__UserSetting__c.object-meta.xml
<CustomObject>
    <label>User Setting</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>User Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>