unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Date_Horizon_Properties__c.field-meta.xml
<CustomField>
    <fullName>FSL__Date_Horizon_Properties__c</fullName>
    <description>Selected date horizon fields</description>
    <label>Date Horizon Properties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>