unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__DaysInUtilizationView__c.field-meta.xml
<CustomField>
    <fullName>FSL__DaysInUtilizationView__c</fullName>
    <defaultValue>14</defaultValue>
    <label>Days In Utilization View</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>