unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Drag_Na_Duration__c.field-meta.xml
<CustomField>
    <fullName>FSL__Drag_Na_Duration__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Drag Na Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>