unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Filters__c.field-meta.xml
<CustomField>
    <fullName>FSL__Filters__c</fullName>
    <description>Custom service list filters</description>
    <label>Filters</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>