unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Gantt_Palette__c.field-meta.xml
<CustomField>
    <fullName>FSL__Gantt_Palette__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gantt Palette</label>
    <referenceTo>FSL__GanttPalette__c</referenceTo>
    <relationshipLabel>User Settings</relationshipLabel>
    <relationshipName>User_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>