unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Gantt_View_Finish_Hour__c.field-meta.xml
<CustomField>
    <fullName>FSL__Gantt_View_Finish_Hour__c</fullName>
    <defaultValue>24</defaultValue>
    <description>Set the visible finish hour on the timeline</description>
    <label>Gantt View Finish Hour</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>