unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__HideSchedulingAgentIntro__c.field-meta.xml
<CustomField>
    <fullName>FSL__HideSchedulingAgentIntro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the Scheduling Agent introduction screen is hidden.</description>
    <label>Hide Scheduling Agent Introduction</label>
    <type>Checkbox</type>
</CustomField>