unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Highlight_Weekeneds__c.field-meta.xml
<CustomField>
    <fullName>FSL__Highlight_Weekeneds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Highlight Weekeneds On The Gantt</description>
    <label>Highlight Weekeneds</label>
    <type>Checkbox</type>
</CustomField>