unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Include_Weekends__c.field-meta.xml
<CustomField>
    <fullName>FSL__Include_Weekends__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include weekends inside the gantt view</description>
    <label>Include Weekends</label>
    <type>Checkbox</type>
</CustomField>