unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__LastGanttView__c.field-meta.xml
<CustomField>
    <fullName>FSL__LastGanttView__c</fullName>
    <description>The last view shown on the Gantt</description>
    <label>Last Gantt View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>