unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__LastViewedGanttDate__c.field-meta.xml
<CustomField>
    <fullName>FSL__LastViewedGanttDate__c</fullName>
    <description>The last date viewed on the Gantt</description>
    <label>Last Date Viewed on Gantt</label>
    <type>DateTime</type>
</CustomField>