unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Left_Panel_Width_Percentage__c.field-meta.xml
<CustomField>
    <fullName>FSL__Left_Panel_Width_Percentage__c</fullName>
    <label>Left Panel Width Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>