unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Load_On_Today__c.field-meta.xml
<CustomField>
    <fullName>FSL__Load_On_Today__c</fullName>
    <defaultValue>false</defaultValue>
    <description>First load gantt on today&#39;s date or last visited date</description>
    <label>Load On Today</label>
    <type>Checkbox</type>
</CustomField>