unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Longterm_Min_Absence_Duration__c.field-meta.xml
<CustomField>
    <fullName>FSL__Longterm_Min_Absence_Duration__c</fullName>
    <defaultValue>8</defaultValue>
    <description>Minimum duration of Resource Absence to show on the long term view</description>
    <label>Longterm Minimum Absence Duration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>