unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Longterm_Num_Of_Months__c.field-meta.xml
<CustomField>
    <fullName>FSL__Longterm_Num_Of_Months__c</fullName>
    <defaultValue>8</defaultValue>
    <description>Number of months to display on the long term view</description>
    <label>Months on view</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>