unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Map_Object_Markers__c.field-meta.xml
<CustomField>
    <fullName>FSL__Map_Object_Markers__c</fullName>
    <label>Map Object Markers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>