unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Map_Reports__c.field-meta.xml
<CustomField>
    <fullName>FSL__Map_Reports__c</fullName>
    <label>Map Reports</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>