unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Resource_Row_Height__c.field-meta.xml
<CustomField>
    <fullName>FSL__Resource_Row_Height__c</fullName>
    <description>Set the height of a row in the gantt</description>
    <label>Resource Row Height</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>medium</fullName>
                <default>true</default>
                <label>medium</label>
            </value>
            <value>
                <fullName>xsmall</fullName>
            </value>
            <value>
                <fullName>small</fullName>
            </value>
            <value>
                <fullName>large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>