unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Scheduling_horizon_limit__c.field-meta.xml
<CustomField>
    <fullName>FSL__Scheduling_horizon_limit__c</fullName>
    <defaultValue>14</defaultValue>
    <description>Determines the number of days to show before the selected scheduling horizon</description>
    <label>Scheduling horizon limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>