unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__ShowFavoriteTerritoriesTab__c.field-meta.xml
<CustomField>
    <fullName>FSL__ShowFavoriteTerritoriesTab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default tab to show on the territories window</description>
    <label>Show Favorite Territories Tab</label>
    <type>Checkbox</type>
</CustomField>