unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Toggled_Territories__c.field-meta.xml
<CustomField>
    <fullName>FSL__Toggled_Territories__c</fullName>
    <description>Decide if a territory is opened on the Gantt view</description>
    <label>Toggled Territories</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>