unpackaged/main/default/objects/FSL__UserSetting__c/fields/FSL__Utilization_Properties__c.field-meta.xml
<CustomField>
    <fullName>FSL__Utilization_Properties__c</fullName>
    <description>Selected properties for calculating utilization</description>
    <label>Utilization Properties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>